Bug 159107 - Removing row in footnote's floating table removes whole table (track changes on but not visible)
Summary: Removing row in footnote's floating table removes whole table (track changes ...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:24.8.0 target:24.2.1 target:7.6.6
Keywords: bibisected, bisected, regression
Depends on:
Blocks: DOCX-Footnote-Endnote DOCX-Floatingtable Track-Changes-Table
  Show dependency treegraph
 
Reported: 2024-01-10 15:02 UTC by Stéphane Guillou (stragu)
Modified: 2024-02-21 03:00 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
sample DOCX (9.45 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2024-01-10 15:02 UTC, Stéphane Guillou (stragu)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Stéphane Guillou (stragu) 2024-01-10 15:02:31 UTC
Created attachment 191847 [details]
sample DOCX

When deleting a row in a table in a footnote, with track changes on (but not visible), the whole table disappears and can't be brought back with Ctrl + Z.

Steps:
1. open attachment (has Record: On; Show: Off)
2. click inside footnote table
3. delete row: whole table disappears (and is greyed out in Navigator)
4. Ctrl + Z: no table nor row come back

Reproduced in recent trunk build:

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: e83c7ec2f4d801365235bf56d7cc8cf31ef4a00e
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Bibisected with linux-64-7.6 repository to first bad build [fcf57c8efc126fb5a1cabefd2a3e8d33c57d5860] which points to core commit ce3308a926f036b87515b8cd97d2b197063dc77a, but using ImportFloatingTableAsSplitFly = true, bibisected to first bad build [4678abe6162fa40671a976ec7fb04e581240a852] which points to:

commit d477fa8ac1b0d3ee81427217bbb5950278ab16db
author	Miklos Vajna 	Fri Mar 17 14:00:17 2023 +0100
committer	Miklos Vajna 	Fri Mar 17 14:10:34 2023 +0000
sw floattable: unconditionally map <w:tblpPr> to SwFormatFlySplit
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/149044

Miklos, can you please have a look?
Comment 1 Commit Notification 2024-01-30 09:20:04 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/af15f8b7f346898677f1eee6521a6be1ff63eb56

tdf#159107 sw floattable: prefer inline table in footnote with change tracking

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Miklos Vajna 2024-01-30 09:21:37 UTC
^ Laszlo: the above fixes the immediate regression, but if you have time, then fixing the root cause at a layout level may be interesting, it's probably some table-in-not-split-fly or redline-table problem. This just tweaks the DOCX import to not trigger the layout bug.
Comment 3 Commit Notification 2024-02-01 09:13:22 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/d19f051dd4244bdfb58458d4287305b59c2915c6

tdf#159107 sw floattable: prefer inline table in footnote with change tracking

It will be available in 24.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2024-02-14 12:50:45 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/9589438d53f32ba7b59512d56a6dbd1d28de70a6

tdf#159107 sw floattable: prefer inline table in footnote with change tracking

It will be available in 7.6.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Stéphane Guillou (stragu) 2024-02-21 03:00:44 UTC
Fix verified in:

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: ef9e1116d1100af50d7b74dcee5155c81b7b50fb
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Thanks Miklos! :)